[project]
name = "data-analyst-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.46.0,<2.0.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "langchain-core (>=0.3.66,<0.4.0)",
    "langchain-experimental (>=0.3.4,<0.4.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "llama-cpp-python (>=0.3.9,<0.4.0)",
    "langchain-community (>=0.3.26,<0.4.0)"
]

[tool.poetry]
packages = [{include = "data_analyst_agent", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"