[project]
name = "data-analyst-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"


[tool.poetry]
packages = [{include = "data_analyst_agent", from = "agent"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
streamlit          = ">=1.46.0,<2.0.0"
langgraph          = ">=0.4.8,<0.5.0"
pandas             = ">=2.3.0,<3.0.0"
langchain-core     = ">=0.3.66,<0.4.0"
langchain-experimental = ">=0.3.4,<0.4.0"
langchain-community    = ">=0.3.26,<0.4.0"
langchain-ollama       = ">=0.3.3,<0.4.0"
pydantic            = ">=2.11.7,<3.0.0"
llama-cpp-python    = ">=0.3.9,<0.4.0"
ipykernel           = ">=6.29.5,<7.0.0"
langchain-sandbox = { git = "https://github.com/langchain-ai/langchain-sandbox.git", rev = "refs/pull/37/head", subdirectory = "libs/sandbox-py" }
tabulate = "^0.9.0"
rich = "^14.0.0"
